--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,6 +13,8 @@ enable_testing()
 add_executable(test_test test_test.cpp)
 add_executable(point_1 point_1.cc)
 
+# test:
+
 add_test (test0 test_test)
 add_test (point0 point_1)
-add_test (point1 ${CMAKE_COMMAND} -E compare_files point_1.ouput output)
+add_test (point1 ${CMAKE_COMMAND} -E compare_files point_1.ouput temp.output)
